--- a/style.css
+++ b/style.css
@@ -15,6 +15,13 @@
 
 }
 
+.map {
+    height: 400px;
+    width: 100%;
+    border: 1px #feda6a solid;
+    border-radius: 5px;
+  }
+
 h1{
     font-size: 1.5em;
 }
