--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     color: #feda6a;
     text-shadow: black;
     text-align: center;
-    font-size: 1.8em;
+    font-size: 2em;
 
 }
 
@@ -22,8 +22,30 @@
     border-radius: 5px;
   }
 
+  .panel-body{
+      margin: 10px;
+  }
+
+   #upperRow,
+   #lowerRow{
+      box-shadow: 2px 2px 3px 4px #393f4d;
+      color: #d4d4dc;
+      padding: 10px;
+      border-radius:5px;
+      margin-bottom: 30px;
+  } 
+
+.title{
+    font-size: .8em;
+}
+
 h1{
     font-size: 1.5em;
+}
+
+h4{
+    float:right;
+    color:black;
 }
 
 #jumboText{
@@ -37,6 +59,7 @@ h1{
 
 h2 {
     text-align: center;
+    font-size: 2em;
 }
 
 h3 {
