--- a/style.css
+++ b/style.css
@@ -40,11 +40,14 @@
 }
 
 h1{
-    font-size: 1.5em;
+    font-size: 1.5rem;
 }
 
+h3{
+    font-size: 1.2em;
+}
 h4{
-    float:right;
+    text-align: center;
     color:black;
 }
 
