--- a/style.css
+++ b/style.css
@@ -95,3 +95,24 @@ body{
     padding: 20px;
 }
 
+.candidate-container{
+    display:flex;
+    flex-wrap:wrap;
+}
+
+.candidate-card{
+    text-align: center;
+    padding: 16px;
+    border: 1px solid gray;
+    border-radius: 5px;
+    margin: 10px;
+    width: 30%;
+
+}
+
+
+
+.well{
+    margin: 10px;
+}
+
