--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -36,6 +36,10 @@ h1.jumboText{
    margin: 10px 10px 30px 10px;
 } 
 
+a {
+    color: #feda6a;
+}
+
 #map {
     height: 300px;
     width: 100%;
@@ -60,10 +64,26 @@ h1.jumboText{
 
   
 
+#searchRepBtn{
+    margin: 20px;
+    background-color: #393f4d;
+    color: #feda6a;
+    border-color: #feda6a;
+    border-radius: 20px;
+    font-size: 20px;
+}
+#homeBtn{
+    margin: 20px;
+    background-color: #393f4d;
+    color: #feda6a;
+    border-color: #feda6a;
+    border-radius: 20px;
+    font-size: 20px;
+    float: right;
+} 
 
 #electionBtn,
 #representBtn,
-#searchRepBtn,
 #earlySearchBtn,
 #pollSearchBtn,
 #candSearchBtn{
@@ -76,8 +96,7 @@ h1.jumboText{
     font-size: 16px;
     
 }  
-#backBtn,
-#homeBtn{
+#backBtn {
     float:right;
     margin:15px;
     background-color: #393f4d;
