--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -11,10 +11,10 @@
     text-shadow: black;
     text-align: center;
     font-size: 2em;
+    border-radius: 0;
    /* background-image: url("https://www.pexels.com/photo/abstract-architecture-building-exterior-geometric-593158/"); */
    /* background-size: cover; */
    
-
 }
 
 h1.jumboText{
@@ -24,11 +24,12 @@ h1.jumboText{
 .jumboText{
     font-size: 1.5em;
 }
+
 #upperRow,
 #lowerRow,
 #lowestRow,
 #secondLowestRow{
-   box-shadow: 2px 2px 3px 4px #393f4d;
+   box-shadow: 1px 1px 2px 2px lightgray;
    /* color: #d4d4dc; */
    background-color: white;
    padding: 10px;
@@ -40,17 +41,18 @@ h1.jumboText{
     height: 300px;
     width: 100%;
     border: 1px #feda6a solid;
-    border-radius: 5px;
+    /* border-radius: 5px; */
   }
 
   .panel{
       border-color:  #393f4d;
-      box-shadow: 2px 2px 3px 3px #393f4d;
+      box-shadow: 1px 1px 2px 2px lightgray;
+      border-radius:0;;
   }
 
   .panel-body{
-      margin: 10px;
-      padding: 10px;
+      margin: 5px;
+      padding: 5px;
   }
 
   .panel-heading{
@@ -58,10 +60,10 @@ h1.jumboText{
     color: #feda6a;
   }
 
-  
+/*  it changed all the representatve links to yellow and made them hard to read so I changed the button color a different way 
 a {
     color: #feda6a !important;
-}
+} */
 
 #electionBtn,
 #representBtn,
@@ -160,8 +162,9 @@ header {
 }
 
 body{
-    /* background-color: whitesmoke; */
+    background-color: whitesmoke;
     font-size:1.3em;
+    /* background-image: url("flag-of-america-1590766.jpg"); */
 
 }
 
@@ -178,7 +181,7 @@ body{
     text-align: center;
     padding: 16px;
     border: 1px solid gray;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     margin: 22px;
     width: 29%;
     background-color: lightgray;
@@ -209,7 +212,7 @@ body{
     text-align: center;
     padding: 16px;
     border: 1px solid gray;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     margin: 10px;
     width: 30%;
 
@@ -218,7 +221,7 @@ body{
 
 .tile.is-child{
     background-color: white;
-    box-shadow: 1px 1px 1px 1px lightgray;
+    box-shadow: 1px 1px 2px 2px lightgray;
 }
 
 .well{
@@ -229,4 +232,48 @@ p{
     line-height: 1.8em;
     font-size:1.2em;
 }
+
+@media (max-width: 768px) {
+
+    .card{
+        text-align: center;
+        padding: 10px;
+        border: 1px solid gray;
+        /* border-radius: 5px; */
+        margin: 10px;
+        width: 100%;
+        background-color: lightgray;
+        
+    }
+    .box{
+        padding:0;
+    }
+    p{
+        line-height: 1.3;
+    }
+    .jumbotron{
+        font-size: 1.2em;
+    }
+    #electionBtn,
+    #representBtn,
+    #searchRepBtn,
+    #earlySearchBtn,
+    #pollSearchBtn,
+    #candSearchBtn{
+        margin:5px;
+        font-size: 10px;
+        
+    }  
+    #backBtn,
+    #homeBtn{
+        float:none;
+        margin:5px;
+        font-size: 10px;
+    }
+
+    #earlyVoteSection{
+        padding: 0;
+    }
+}
+
 
