--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -28,7 +28,7 @@ h1.jumboText{
 #lowerRow,
 #lowestRow,
 #secondLowestRow{
-   box-shadow: 2px 2px 3px 4px #393f4d;
+   box-shadow: 1px 1px 2px 2px lightgray;
    /* color: #d4d4dc; */
    background-color: white;
    padding: 10px;
@@ -45,7 +45,7 @@ h1.jumboText{
 
   .panel{
       border-color:  #393f4d;
-      box-shadow: 2px 2px 3px 3px #393f4d;
+      box-shadow: 1px 1px 2px 2px lightgray;
   }
 
   .panel-body{
@@ -60,7 +60,7 @@ h1.jumboText{
 
   
 
-
+#repSearchBtn,
 #electionBtn,
 #representBtn,
 #searchRepBtn,
@@ -86,6 +86,7 @@ h1.jumboText{
     font-size: 15px;
 }
 
+#repSearchBtn:hover,
 #pollSearchBtn:hover,
 #backBtn:hover,
 #earlySearchBtn:hover,
@@ -228,3 +229,52 @@ p{
     font-size:1.2em;
 }
 
+
+@media (max-width:768px){
+    p{
+        line-height: 1.3;
+    }
+    #electionBtn,
+    #representBtn,
+    #searchRepBtn,
+    #earlySearchBtn,
+    #pollSearchBtn,
+    #candSearchBtn{
+        margin:5px;
+        font-size: 10px;
+        
+    }  
+    #backBtn,
+    #homeBtn{
+        float:none;
+        margin:5px;
+        font-size: 10px;
+    }
+
+    .jumbotron {
+        font-size: 1.2em;
+    }
+  
+    }
+    .jumboText{
+        font-size: 1.2em;
+    }
+    .col-lg-12,
+    .col-lg-6,
+    .col-lg-3{
+        padding:0;
+    }
+
+    .card,
+    .candidate-card{
+        width:100%;
+        margin:5px;
+        padding:5px;
+    }
+    #earlyVoteSection,
+    #candidateSection,
+    #wellSection{
+        padding:5px;
+    }
+
+})
