--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -27,7 +27,8 @@ h1.jumboText{
 #upperRow,
 #lowerRow,
 #lowestRow,
-#secondLowestRow{
+#secondLowestRow,
+#repResultRow{
    box-shadow: 1px 1px 2px 2px lightgray;
    /* color: #d4d4dc; */
    background-color: white;
@@ -72,7 +73,7 @@ h1.jumboText{
     color: #feda6a;
     border-color: #feda6a;
     border-radius: 20px;
-    font-size: 15px;
+    font-size: 17px;
     
 }  
 #backBtn,
@@ -232,8 +233,11 @@ p{
 
 @media (max-width:768px){
     p{
-        line-height: 1.3;
+        line-height: 1.3em;
+        font-size:1.1em;
     }
+
+    #repSearchBtn,
     #electionBtn,
     #representBtn,
     #searchRepBtn,
@@ -242,20 +246,21 @@ p{
     #candSearchBtn{
         margin:5px;
         font-size: 10px;
-        
+        width:45%;
     }  
+
     #backBtn,
     #homeBtn{
         float:none;
         margin:5px;
         font-size: 10px;
+        width:45%;
     }
 
     .jumbotron {
         font-size: 1.2em;
     }
-  
-    }
+
     .jumboText{
         font-size: 1.2em;
     }
@@ -271,10 +276,11 @@ p{
         margin:5px;
         padding:5px;
     }
+
     #earlyVoteSection,
     #candidateSection,
     #wellSection{
         padding:5px;
     }
 
-})
+}
