--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -202,7 +202,7 @@ body{
     text-align: center;
     padding: 16px;
     border: 1px solid gray;
-    /* border-radius: 5px; */
+    border-radius: 5px;
     margin: 10px;
     width: 30%;
 
@@ -221,6 +221,7 @@ body{
 p{
     line-height: 1.8em;
     font-size:1.2em;
+    text-align:center;
 }
 
 
